# rust-web-clean-archi

./: Cargo.toml  Makefile  README.md  build.rs
migrations/: 0_init_foo_table.sql
src/: main.rs
src/domain/: errors.rs  foo.rs  foo_repository.rs  foo_test.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/persistence/: foo_repository_sql_impl.rs
src/infrastructure/route_http/: routes_http.rs
src/usecases/: create_foo.rs  find_all_foo.rs  increment_year_of_foo.rs  mod.rs  usecases_test.rs
