[package]
name = "rust-web-clean-archi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
log = "0.4.17"
uuid = { version = "1.2.2", features = ["v5"] }
serde = "1.0.147"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-async-std-native-tls", "chrono"] }
async-std = { version = "1.12.0", features = [ "attributes" ] }
dotenvy = "0.15.6"
futures = "0.3.25"
